desafiodecdigoita/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: transaction-api
  labels:
    app.kubernetes.io/name: transaction-api
    app.kubernetes.io/part-of: transaction-system
