desafiodecdigoita/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-api
  namespace: transaction-api
  labels:
    app.kubernetes.io/name: transaction-api
    app.kubernetes.io/part-of: transaction-system
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: transaction-api
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
